--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-The internet
+<a href="https://eldritch.goblin.tips/bounce.html">Bounces</a>
+<a href="http://eldritch.goblin.tips/bounce_checker.html">Bounce Checker</a>
