--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
+<h1>goblin strats/knowledge repo</h1>
+
 <a href="https://eldritch.goblin.tips/bounce.html">Bounces</a>
+
 <a href="http://eldritch.goblin.tips/bounce_checker.html">Bounce Checker</a>
+
+<footer>
+<p>Made by me</p>
+<p>Do not steal</p>
+</footer>
