--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
-<h1>goblin strats/knowledge repo</h1>
+<h1>goblin strats/knowledge repository</h1>
 
+
+<h2> mechanics</h2>
 <a href="https://eldritch.goblin.tips/bounce.html">Bounces</a>
 
+<a href="http://eldritch.goblin.tips/edgebug.html">Edgebug</a>
+
+<h2>tools</h2>
+
 <a href="http://eldritch.goblin.tips/bounce_checker.html">Bounce Checker</a>
+
 
 <footer>
 <p>Made by me</p>
