--- a/bounce.html
+++ b/bounce.html
@@ -1,3 +1,6 @@
+<header>
+<a href="http://eldritch.goblin.tips/index.html">back to index</a>
+</header>
 <h1> Bounce </g1>
 <h2> what </h2>
 A bounce is when you jump or otherwise get launched away from a 1u (under certain circumstances 2u) tele due to a floating point error causing you to "pseudo-land" 1 tick before coming into contact with the ground.
