--- a/edgebug.html
+++ b/edgebug.html
@@ -1,3 +1,6 @@
+<header>
+<a href="http://eldritch.goblin.tips/index.html">back to index</a>
+</header>
 <h1>Edgebug</h1>
 If you land on the edge of a platform on the same tick as you slide off, you do not register as landing. This means:
 <ul>
@@ -10,3 +13,4 @@ If you land on the edge of a platform on the same tick as you slide off, you do 
 Usually, their purpose in a map is obvious OR it's a difficult means of getting slightly more distance/slowing down in a vertical strafe jump. Most exceptions are edgesyncs in demo bonuses.
 
 Edgebugs can be useful as a setup for bounces (jump_crypt).
+
