--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
 
 <a href="http://eldritch.goblin.tips/edgebug.html">Edgebug</a>
 
+<a href="http://eldritch.goblin.tips/airstrafe.html">Airstrafe</a>
+
 <h2>tools</h2>
 
 <a href="http://eldritch.goblin.tips/bounce_checker.html">Bounce Checker</a>
 
+<h2>other</h2>
+
+<a href="https://eldritch.goblin.tips/maplists.html">Maplists</a>
+
+
 
 <footer>
-<p>Made by me</p>
-<p>Except for the bounce checker I stole that</p>
-<p>Do not steal</p>
+Made by me
+
+Except for the bounce checker I stole that
+
+Do not steal
 </footer>
