--- a/edgebug.html
+++ b/edgebug.html
@@ -10,7 +10,7 @@ If you land on the edge of a platform on the same tick as you slide off, you do 
 <li>But you DO lose all vertical speed</li>
 </ul>
 
-Usually, their purpose in a map is obvious OR it's a difficult means of getting slightly more distance/slowing down in a vertical strafe jump. Most exceptions are edgesyncs in demo bonuses.
-
+Usually, their purpose in a map is obvious OR it's a difficult means of getting slightly more distance/slowing down in a vertical strafe jump. Most exceptions are edgesyncs in horizontal hole jumps.
+<br /><br />
 Edgebugs can be useful as a setup for bounces (jump_crypt).
 
