--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 
 
 <h2> mechanics</h2>
-<a href="https://eldritch.goblin.tips/bounce.html">Bounces</a>
+<a href="https://eldritch.goblin.tips/bounce.html">Bounces</a><br />
 
-<a href="http://eldritch.goblin.tips/edgebug.html">Edgebug</a>
+<a href="http://eldritch.goblin.tips/edgebug.html">Edgebug</a><br />
 
-<a href="http://eldritch.goblin.tips/airstrafe.html">Airstrafe</a>
+<a href="http://eldritch.goblin.tips/airstrafe.html">Airstrafe</a><br />
 
 <h2>tools</h2>
 
-<a href="http://eldritch.goblin.tips/bounce_checker.html">Bounce Checker</a>
+<a href="http://eldritch.goblin.tips/bounce_checker.html">Bounce Checker</a><br />
 
 <h2>other</h2>
 
-<a href="https://eldritch.goblin.tips/maplists.html">Maplists</a>
+<a href="https://eldritch.goblin.tips/maplists.html">Maplists</a><br />
 
 
 
 <footer>
-Made by me
+Made by me<br />
 
-Except for the bounce checker I stole that
+Except for the bounce checker I stole that<br />
 
-Do not steal
+Do not steal<br />
 </footer>
