--- a/edgebug.html
+++ b/edgebug.html
@@ -14,3 +14,6 @@ Usually, their purpose in a map is obvious OR it's a difficult means of getting 
 <br /><br />
 Edgebugs can be useful as a setup for bounces (jump_crypt).
 
+<br /><br />
+
+Edgebugs which happen at bounce heights also cause you to enter walking, which slows your speed despite avoiding teles.
