--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 <a href="http://eldritch.goblin.tips/airstrafe.html">Airstrafe</a><br />
 
+<a href="http://eldritch.goblin.tips/wallbug.html">Wallbug</a><br />
+
 <h2>tools</h2>
 
 <a href="http://eldritch.goblin.tips/bounce_checker.html">Bounce Checker</a><br />
