--- a/bounce.html
+++ b/bounce.html
@@ -70,7 +70,7 @@ The jump bug (JB) has been in source/gldsrc games for a long time. When you uncr
 
 Note, you can't do a crouched PB from a JB; the requirement that you uncrouch at the same time as jumping delays the next crouch.
 
-Also, a jumpbug (regardless of whether or not it's from a bounce height!) will negate all fall damage.
+Also, a jumpbug will negate all fall damage.
 
 <h2>Jumpbug heights</h2>
 Any uncrouched bounce height is also a JB height. Additionally, those JB heights extend an extra unit shallower (e.g. 1202-1202.99 is a walkoff uncrouched bounce; anything from 1201-1202.99 is a walkoff jumpbug).
@@ -87,5 +87,6 @@ The most consistent/useful setup for a random bounce is to pogo in place, attemp
 
 <footer>
 <p>Sources</p>
-<p>https://www.youtube.com/watch?time_continue=235&v=fSpHs0yWeCQ</p>
+<p>a bunch of stuff: https://www.youtube.com/watch?time_continue=235&v=fSpHs0yWeCQ</p>
+<p>jumpbug initial thread (some misinfo): https://jump.tf/forum/index.php/topic,2565.0.html </p>
 </footer>
