--- a/edgebug.html
+++ b/edgebug.html
@@ -12,8 +12,8 @@ If you land on the edge of a platform on the same tick as you slide off, you do 
 
 Usually, their purpose in a map is obvious OR it's a difficult means of getting slightly more distance/slowing down in a vertical strafe jump. Most exceptions are edgesyncs in horizontal hole jumps.
 <br /><br />
-Edgebugs can be useful as a setup for bounces (jump_crypt).
+Edgebugs can be useful as a setup for bounces, walkoff or crouch walkoff height (jump_crypt).
 
 <br /><br />
 
-Edgebugs which happen at bounce heights also cause you to enter walking, which slows your speed despite avoiding teles.
+Edgebugs which happen at bounce heights also cause you to enter walking (or crouch walking), which slows your speed despite avoiding teles.
