--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 
 
 <h2> mechanics</h2>
-<a href="https://eldritch.goblin.tips/bounce.html">Bounces</a><br />
-
-<a href="http://eldritch.goblin.tips/edgebug.html">Edgebug</a><br />
-
 <a href="http://eldritch.goblin.tips/airstrafe.html">Airstrafe</a><br />
-
+<a href="http://eldritch.goblin.tips/bhop.html">Bhop</a><br />
+<a href="https://eldritch.goblin.tips/bounce.html">Bounces</a><br />
+<a href="http://eldritch.goblin.tips/edgebug.html">Edgebug</a><br />
 <a href="http://eldritch.goblin.tips/wallbug.html">Wallbug</a><br />
-
 <h2>tools</h2>
 
 <a href="http://eldritch.goblin.tips/bounce_checker.html">Bounce Checker</a><br />
