--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h2>tools</h2>
 
 <a href="http://eldritch.goblin.tips/bounce_checker.html">Bounce Checker</a><br />
+<a href="http://eldritch.goblin.tips/bounce_heights.xlsx">Bounce Heights</a><br />
 
 <h2>other</h2>
 
