--- a/wallbug.html
+++ b/wallbug.html
@@ -33,6 +33,6 @@ Usually, halting downward momentum just before starting a fast wallclimb. Also, 
 
 <footer>
 <p>Sources</p>
-<p>Types: https://jump.tf/forum/index.php/topic,2462.msg20797.html#msg20797</p>
-<p>Coordinate wallbugs: https://jump.tf/forum/index.php/topic,2065.msg16718.html#msg16718</p>
+<p>Types: <a href="https://jump.tf/forum/index.php/topic,2462.msg20797.html#msg20797">https://jump.tf/forum/index.php/topic,2462.msg20797.html#msg20797</a></p>
+<p>Coordinate wallbugs: <a href="https://jump.tf/forum/index.php/topic,2065.msg16718.html#msg16718">https://jump.tf/forum/index.php/topic,2065.msg16718.html#msg16718</a></p>
 </footer>
