--- a/bounce.html
+++ b/bounce.html
@@ -88,6 +88,6 @@ The most consistent/useful setup for a random bounce is to pogo in place, attemp
 <footer>
 <p>Sources</p>
 <a href="http://eldritch.goblin.tips/bounce_heights.xlsx">Bounce height spreadsheet</a> made by our lord and savior RNC<br />
-<p>a bunch of stuff: https://www.youtube.com/watch?time_continue=235&v=fSpHs0yWeCQ</p>
-<p>jumpbug initial thread (some misinfo): https://jump.tf/forum/index.php/topic,2565.0.html </p>
+<p>a bunch of stuff: <a href="https://www.youtube.com/watch?time_continue=235&v=fSpHs0yWeCQ">https://www.youtube.com/watch?time_continue=235&v=fSpHs0yWeCQ</a></p>
+<p>jumpbug initial thread (some misinfo): <a href="https://jump.tf/forum/index.php/topic,2565.0.html">https://jump.tf/forum/index.php/topic,2565.0.html</a> </p>
 </footer>
