--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <footer>
 Made by me<br />
 
-Except for the bounce checker I stole that<br />
+Except for the bounce checker/spreadsheet I stole those<br />
 
 Do not steal<br />
 </footer>
