--- a/maplists.html
+++ b/maplists.html
@@ -35,4 +35,5 @@
 <li>jump_armature_final most of c2+3, b3</li>
 <li>jump_when_b2_fix many, no real cool ones</li>
 <li>jump_how many</li>
+<li>jump_why bonus small hole</li>
 </ul>
