--- a/maplists.html
+++ b/maplists.html
@@ -11,9 +11,11 @@
 <li>jump_xhappy L11</li>
 </ul>
 
-<h2>nuclear maps</h2>
+<h2>kz</h2>
 <ul>
 <li>jump_uranium_b4</li>
+<li>armature bsomething</li>
+<li>when b4</li>
 </ul>
 
 <h2>nuclear bonuses</h2>
@@ -28,12 +30,11 @@
 <ul>
 <li>jump_speed2</li>
 <li>jump_rvr_b1 b2</li>
-<li>jump_speed (x2)</li>
-<li>jump_aggregate b1 b3, a jump somewhere</li>
+<li>jump_speed</li>
+<li>jump_aggregate b1 b3</li>
 <li>jump_cavern_final last</li>
 <li>jump_aando many</li>
 <li>jump_armature_final most of c2+3, b3</li>
-<li>jump_when_b2_fix many, no real cool ones</li>
-<li>jump_how many</li>
+<li>jump_how texturebug</li>
 <li>jump_why bonus small hole</li>
 </ul>
