--- a/wallbug.html
+++ b/wallbug.html
@@ -15,7 +15,7 @@ Types:
 <h3>Angled wall</h3>
 These are the most common, the most consistent, and the most relevant. Any wall which is parallel to the Y axis (vertical) and angled (not parallel to the X or Z axes) can be wallbugged with some consistency. Generally, walls very close to parallel or 45 degrees are the "easiest" to wallbug on, but many (porrly understood) factors go into why some walls are better than others.<br /><br />
 <h3>Texture</h3>
-In Hammer, a func_brush allows the mapmaker to group a number of brushes (simple map primitives) into one larger object to improve performance/organization. At the boundaries between multiple brushes in a func_brush (usually distinguished by a texture change), the player may sometimes wallbug instantaneously. This is what causes wallbugs while pogoing, and what makes a few hole jumps possible (jump_how notably).<br /><br />
+In Hammer, a func_brush allows the mapmaker to group a number of brushes (simple map primitives) into one larger object to improve performance/organization. At the boundaries between multiple brushes in a func_brush (usually distinguished by a texture change), the player may sometimes wallbug instantaneously. This is what causes wallbugs while pogoing, and what makes a few hole jumps possible (jump_how notably). Since you only get an instantaneous wallbug no matter what, swap from (w+a)->(w+d) and turn to get both "tries" at the wallbug.<br /><br />
 <h3>Coordinate</h3>
 Walls, even axis-aligned walls, which are near a power of 2 units from the map origin cause wallbugs. cp_gullywash has a number of these around the midpoint.
 <h3>Specific Turbo Walls</h3>
