--- a/maplists.html
+++ b/maplists.html
@@ -14,8 +14,9 @@
 <h2>kz</h2>
 <ul>
 <li>jump_uranium_b4</li>
-<li>armature bsomething</li>
+<li>armature b5</li>
 <li>when b4</li>
+<li>why ?</li>
 </ul>
 
 <h2>nuclear bonuses</h2>
