--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 
 <br /><br /><br />
+
+<marquee><blink>
 <footer>
 Made by me<br />
 
@@ -25,3 +27,4 @@ Except for the bounce checker/spreadsheet I stole those<br />
 
 Do not steal<br />
 </footer>
+</blink></marquee>
