--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
 
 <br /><br /><br />
 
-<marquee><blink>
-<footer>
-Made by me<br />
+<marquee direction="down" width="1337" height="420" behavior="alternate" style="border:solid" truespeed scrolldelay="5">
+	<marquee behavior="alternate" truespeed scrolldelay="1">
+		<footer>
+		Made by me<br />
 
-Except for the bounce checker/spreadsheet I stole those<br />
+		Except for the bounce checker/spreadsheet I stole those<br />
 
-Do not steal<br />
-</footer>
-</blink></marquee>
+		Do not steal<br />
+		</footer>
+	</marquee>
+</marquee>
