--- a/wallbug.html
+++ b/wallbug.html
@@ -22,6 +22,7 @@ Walls, even axis-aligned walls, which are near a power of 2 units from the map o
 <ul>
 <li>Diabarha last, inner hexagon wall 10 o'clock from the "16"</li>
 <li>Strikapult L4, right angled wall after the catapult</li>
+<li>Scorpion last, one of the texture changes is extremely consistent, others are abnormally easy</li>
 </ul>
 
 <h2>how</h2>
