--- a/bounce.html
+++ b/bounce.html
@@ -75,7 +75,7 @@ Also, a jumpbug will negate all fall damage.
 <h2>Jumpbug heights</h2>
 Any uncrouched bounce height is also a JB height. Additionally, those JB heights extend an extra unit shallower (e.g. 1202-1202.99 is a walkoff uncrouched bounce; anything from 1201-1202.99 is a walkoff jumpbug).
 
-<h2>Walkhop</h2>
+<h2>Walkhop/Glidestep</h2>
 Some random guy destroyed the wrs for a couple stair bonuses (protactinium, how b3) with this: uncrouch into the next step up as you jump over it to land while going up. This is the same idea as the uncrouch part of a jumpbug. This lets you ascend without letting go of W by timing the uncrouch for just when you go over the lip. Once it gets going, it's just a matter of maintaining the rhythm. Way faster than bhops or 2 at a time can get you.
 
 <h1>Random bounces</h1>
