--- a/bounce.html
+++ b/bounce.html
@@ -68,9 +68,9 @@ With any rocket launcher, given the vertical distance between the start and end,
 <h1>Jumpbugs</h1>
 The jump bug (JB) has been in source/goldsrc games for a long time. When you uncrouch in the air, you instantaneously go from your crouched collision hull to your uncrouched collision hull. We only care about the bottom face of that box, which moves down about 7 units in that tick. If you uncrouch into a bounce height (1-2u off the ground), you can jump (or do a normal bounce). This can "penetrate" a much higher tele; always at least 6u. The limit for how high of a tele this works on comes from the maximum upward speed a jump can give you; otherwise you hit the tele on the way up.
 
-Note, you can't do a crouched PB from a JB; the requirement that you uncrouch at the same time as jumping delays the next crouch.
+Note, you can't do a crouched PB from a JB; the requirement that you uncrouch at the same time as jumping delays the next crouch.<br>
 
-People usually use <a href="http://eldritch.goblin.tips/scripts/jumpbug.cfg">this script</a> to automate the 1 tick uncrouch/jump.
+People usually use <a href="http://eldritch.goblin.tips/scripts/jumpbug.cfg">this script</a> to automate the 1 tick uncrouch/jump.<br>
 
 Also, a jumpbug will negate all fall damage.
 
